@@ -112,6 +112,7 @@ static int MIDI_open(Sound_Sample *sample, const char *ext)
     sample->actual.rate = 44100;
     sample->actual.format = AUDIO_S16SYS;
     
+    sample->total_time = Timidity_GetSongLength(song);
     sample->flags = SOUND_SAMPLEFLAG_CANSEEK;
     return(1); /* we'll handle this data. */
 } /* MIDI_open */
